--- a/BookCollection/Properties/launchSettings.json
+++ b/BookCollection/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "BookCollection": {
       "commandName": "Project",
-      "launchBrowser": false,
+      "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
