--- a/BookCollection/BookCollection.csproj
+++ b/BookCollection/BookCollection.csproj
@@ -20,11 +20,11 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.4" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.18.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="DataServices\" />
     <Folder Include="Migrations\" />
   </ItemGroup>
 
